# mdbookkit

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc.mjs  .stylelintignore  .stylelintrc.mjs  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  TODO.md  clippy.toml  deno.json  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml  tsconfig.json  tsconfig.scripts.json  tsconfig.web.json  tsconfig.worker.json
crates/mdbook-permalinks/: CHANGELOG.md  Cargo.toml  README.md
crates/mdbook-permalinks/src/: diagnostic.rs  diagnostics.rs  link.rs  main.rs  options.rs  page.rs  tests.rs  vcs.rs
crates/mdbook-permalinks/src/tests/: LICENSE  links.md  paths.md  suffix.md  urls.md
crates/mdbook-permalinks/tests/: .gitignore  env.rs  tests.rs
crates/mdbook-permalinks/tests/ambiguous_absolute_path/: book.toml
crates/mdbook-permalinks/tests/ambiguous_paths/: book.toml
crates/mdbook-permalinks/tests/book_hardcoded_book_link_not_found/: book.toml
crates/mdbook-permalinks/tests/book_hardcoded_repo_link/: book.toml
crates/mdbook-permalinks/tests/book_links/: book.toml
crates/mdbook-permalinks/tests/dev_mode/: book.toml
crates/mdbook-permalinks/tests/dev_mode_editor_uri/: book.toml
crates/mdbook-permalinks/tests/dev_mode_in_ci/: book.toml
crates/mdbook-permalinks/tests/file_links/: .gitignore  book.toml
crates/mdbook-permalinks/tests/git_no_commit/: book.toml
crates/mdbook-permalinks/tests/git_url_codeberg/: book.toml
crates/mdbook-permalinks/tests/git_url_custom_params/: book.toml
crates/mdbook-permalinks/tests/git_url_from_book/: book.toml
crates/mdbook-permalinks/tests/git_url_invalid_config/: book.toml
crates/mdbook-permalinks/tests/git_url_scp_like/: book.toml
crates/mdbook-permalinks/tests/git_url_tangled/: book.toml
crates/mdbook-permalinks/tests/git_url_tangled_did/: book.toml
crates/mdbook-permalinks/tests/git_url_tangled_malformed/: book.toml
crates/mdbook-permalinks/tests/git_url_tangled_self_hosted/: book.toml
crates/mdbook-permalinks/tests/git_url_unsupported/: book.toml
crates/mdbook-permalinks/tests/git_url_with_query/: book.toml
crates/mdbook-permalinks/tests/html_links/: book.toml
crates/mdbook-permalinks/tests/http_links/: book.toml
crates/mdbook-permalinks/tests/repo_links/: book.toml
crates/mdbook-permalinks/tests/site_url_absolute_paths/: book.toml
crates/mdbook-permalinks/tests/site_url_invalid/: book.toml
crates/mdbook-permalinks/tests/site_url_path_encoding/: book.toml
crates/mdbook-rustdoc-link/: Cargo.toml
crates/mdbook-rustdoc-link/src/: link.rs  main.rs  markdown.rs  tests.rs
crates/mdbook-rustdoc-link/src/page/: diagnostic.rs
crates/mdbook-rustdoc-link/src/tests/: ra-known-quirks.md
crates/mdbook-rustdoc-link/tests/: env.rs
crates/mdbook-rustdoc-links/: CHANGELOG.md  Cargo.toml  README.md
crates/mdbook-rustdoc-links/src/: builder.rs  cache.rs  client.rs  diagnostic.rs  diagnostics.rs  env.rs  item.rs  link.rs  main.rs  markdown.rs  markup.rs  options.rs  page.rs  resolver.rs  subprocess.rs  sync.rs  tests.rs  tracker.rs
crates/mdbook-rustdoc-links/src/link/: diagnostic.rs
crates/mdbook-rustdoc-links/src/page/: diagnostic.rs
crates/mdbook-rustdoc-links/src/tests/: ra-known-quirks.md
crates/mdbook-rustdoc-links/src/tracker/: diagnostic.rs
crates/mdbook-rustdoc-links/tests/: env.rs  tests.rs
crates/mdbookkit/: CHANGELOG.md  Cargo.toml  README.md
crates/mdbookkit-testing/: Cargo.toml
crates/mdbookkit-testing/src/: lib.rs  main.rs
crates/mdbookkit/src/: bin.rs  book.rs  cmp.rs  config.rs  diagnostics.rs  docs.rs  env.rs  error.rs  lib.rs  log.rs  logging.rs  markdown.rs  subprocess.rs  testing.rs  url.rs  util.rs
crates/mdbookkit/tests/: link_forever.rs  rustdoc_link.rs  util.rs
crates/rustdoc-link/: Cargo.toml  README.md
crates/rustdoc-link/src/: cache.rs  client.rs  diagnostics.rs  env.rs  error.rs  item.rs  lib.rs  link.rs  logger.rs  main.rs  markdown.rs  page.rs  sync.rs  terminal.rs
crates/rustdoc-link/tests/: lib.rs
docs/: .gitignore  Cargo.toml  README.md  book.toml  index.html  justfile  main.ts  worker-configuration.d.ts  wrangler.jsonc
docs/app/: index.css  main.css  main.ts  socials.pxd
docs/scripts/: build.ts  preprocessor.ts
docs/src/: CHANGELOG.md  SUMMARY.md  index.md  lib.rs  link-forever.md  rustdoc-link.md
docs/src/_internal/: README.md  mdbook-permalinks-README.md  mdbook-rustdoc-links-README.md  mdbookkit-README.md
docs/src/_snippets/: fail-on-warnings.md  install.md  mdbook-0.4.md  unstable-features.md
docs/src/link-forever/: continuous-integration.md  features.md  known-issues.md  working-with-include.md
docs/src/permalinks/: CHANGELOG.md  check-mode.md  configuration.md  continuous-integration.md  features.md  getting-started.md  index.md  known-issues.md  logging.md  more-ways-to-link.md  tutorial.md
docs/src/rustdoc-link/: caching.md  caveats.md  configuration.md  continuous-integration.md  getting-started.md  index.md  known-issues.md  motivation.md  name-resolution.md  standalone-usage.md  supported-syntax.md  workspace-layout.md
docs/src/rustdoc-links/: CHANGELOG.md  caching.md  configuration.md  continuous-integration.md  faq.md  getting-started.md  index.md  known-issues.md  link-syntax.md  logging.md  motivation.md  name-resolution.md  naming-items.md  standalone-usage.md  supported-syntax.md  workspace-layout.md  writing-links.md
docs/src/snippets/: detecting-ci.md  error-handling.md  logging.md  mdbook-0.4.md
docs/static/: socials.pxd
docs/web/: main.css  main.ts
scripts/cargo-xtask/: Cargo.toml
scripts/cargo-xtask/src/: bin.rs  github.rs
tools/rust-analyzer/: Cargo.toml
tools/rust-analyzer/src/: main.rs
utils/cargo-xtask/: Cargo.toml
utils/cargo-xtask/src/: main.rs  rust_analyzer.rs
utils/clap-reflect/: Cargo.toml
utils/clap-reflect/src/: main.rs
utils/mdbook-socials/: Cargo.toml
utils/mdbook-socials/src/: main.rs
utils/rust-analyzer/: Cargo.toml
utils/rust-analyzer/src/: main.rs
utils/testing/: Cargo.toml
utils/testing/src/: lib.rs
(+458 files in other folders)
