[workspace.package]
publish = false

authors = ["Tony Wu <tonywu6@protonmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tonywu6/mdbookkit"

edition = "2024"
rust-version = "1.89"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[workspace]
default-members = ["crates/*"]
members = ["crates/*", "utils/*", "docs"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
assert_cmd = "2.1.2"
cargo-run-bin = { version = "1.7.5", default-features = false }
clap = { version = "4.5.60", features = ["derive"] }
futures-util = { version = "0.3.32", default-features = false }
indicatif = "0.18.4"
insta = { version = "1.46.3", features = ["yaml", "filters"] }
mdbook-markdown = { version = "0.5.2" }
mdbook-preprocessor = { version = "0.5.2" }
mdbookkit = { path = "crates/mdbookkit", version = "2" }
miette = { version = "7.6.0", features = [
  "fancy-no-backtrace",
], default-features = false }
minijinja = "2.16.0"
percent-encoding = "2.3.2"
predicates = "3.1.4"
pulldown-cmark-to-cmark = "22.0.0"
rstest = "0.26.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
shlex = "1.3.0"
similar = { version = "2.7.0" }
tap = "=1.0.1"
tempfile = "3.26.0"
thiserror = "2.0.18"
tokio = { version = "1", default-features = false }
toml = "1.0.6"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"

[workspace.metadata.bin]
mdbook = { version = "0.5.2" }
