[workspace.package]
publish = false

authors = ["Tony Wu <tonywu6@protonmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tonywu6/mdbookkit"

edition = "2024"
rust-version = "1.89"

[workspace]
default-members = ["crates/*"]
members = ["crates/*", "scripts/*", "docs"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
cargo-run-bin = { version = "=1.7.5", default-features = false }
clap = { version = "4.6.0", features = ["derive"] }
indicatif = "0.18.4"
lol_html = "2.7.2"
mdbook-markdown = { version = "0.5.2" }
mdbook-preprocessor = { version = "0.5.2" }
mdbookkit = { path = "crates/mdbookkit", version = "2" }
mdbookkit-testing = { path = "crates/mdbookkit-testing", version = "0.1" }
minijinja = "2.19.0"
percent-encoding = "2.3.2"
pulldown-cmark-to-cmark = "22.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
shlex = "1.3.0"
tap = "=1.0.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"

[workspace.metadata.bin]
cargo-llvm-cov = { version = "0.8.5" }
cargo-nextest = { version = "0.9.132" }
mdbook = { version = "0.5.2" }
