[workspace.package]
publish = false

authors = ["Tony Wu <noreply@tonywu.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tonywu6/mdbookkit"

edition = "2024"

[workspace]
default-members = ["crates/*"]
members = ["crates/*", "scripts/*", "docs"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.103"
bon = "3.9.3"
camino = "1.2.4"
cargo-run-bin = { version = "=1.7.5", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.6"
lol_html = "3.0.0"
mdbook-markdown = { version = "0.5.4" }
mdbook-preprocessor = { version = "0.5.4" }
mdbookkit = { path = "crates/mdbookkit", version = "3" }
mdbookkit-testing = { path = "crates/mdbookkit-testing", version = "0.1" }
minijinja = "2.21.0"
percent-encoding = "2.3.2"
pulldown-cmark-to-cmark = "22.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
shlex = "2.0.1"
snapbox = "1.2.2"
tap = "=1.0.1"
tempfile = "3.27.0"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"

[workspace.metadata.bin]
cargo-llvm-cov = { version = "0.8.7" }
cargo-nextest = { version = "0.9.140" }
mdbook = { version = "0.5.4" }

[profile.dev.package.mdbookkit-docs]
opt-level = 3

[profile.release]
lto = "fat"
