[package]
name = "mdbookkit-docs"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["unstable-doc"] }
gix-url = { version = "0.30.0" }
mdbook-markdown = { workspace = true }
mdbookkit = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bin]]
name = "mdbookkit-docs"
path = "bin/main.rs"
