[package]
name = "mdbookkit-docs"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["unstable-doc"] }
gix-url = { version = "0.34.0" }
glob = "0.3.3"
image = { version = "0.25.9", features = [
  "png",
  "webp",
], default-features = false }
lol_html = "2.7.0"
mdbook-markdown = { workspace = true }
mdbookkit = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
tap = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }

[[bin]]
name = "mdbookkit-docs"
path = "bin/main.rs"
