[package]
name = "mdbookkit-docs"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
glob = "0.3.3"
image = { version = "0.25.10", features = [
  "png",
  "webp",
], default-features = false }
lol_html = { workspace = true }
mdbook-markdown = { workspace = true }
mdbookkit = { workspace = true }
minijinja = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tap = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }

[[bin]]
name = "mdbookkit-docs"
path = "bin/main.rs"
