[package]
name = "mdbook-permalinks"
publish = true
version = "1.1.2"

edition.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

categories = ["text-processing", "development-tools", "command-line-utilities"]
description = "Generate permalinks in mdBook using paths"
documentation = "https://tonywu6.github.io/mdbookkit/permalinks"
keywords = ["mdbook", "markdown", "documentation", "git", "permalink"]
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
git2 = { version = "0.20.3", default-features = false }
gix-url = { version = "0.34.0" }
mdbook-markdown = { workspace = true }
mdbook-preprocessor = { workspace = true }
mdbookkit = { workspace = true }
miette = { workspace = true }
percent-encoding = { version = "2.3.2" }
serde = { workspace = true }
tap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
mdbookkit = { workspace = true, features = ["_testing"] }
predicates = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[features]
_testing = ["mdbookkit/_testing"]
