[package]
name = "mdbook-permalinks"
publish = true
version = "2.0.1"

edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

categories = ["text-processing", "development-tools", "command-line-utilities"]
description = "Generate permalinks in mdBook using paths"
documentation = "https://docs.tonywu.dev/mdbookkit/permalinks"
keywords = ["mdbook", "markdown", "documentation", "git", "permalink"]
readme = "README.md"

exclude = ["src/tests", "tests"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
git2 = { version = "0.20.4", default-features = false }
gix-url = { version = "0.35.2" }
mdbook-markdown = { workspace = true }
mdbook-preprocessor = { workspace = true }
mdbookkit = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true }
tap = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
mdbookkit-testing = { workspace = true }

[package.metadata.binstall]
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
