[package]
name = "mdbook-permalinks"
publish = true
version = "3.0.1"

edition.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

categories = ["text-processing", "development-tools", "command-line-utilities"]
description = "mdBook preprocessor to generate Git permalinks"
documentation = "https://docs.tonywu.dev/mdbookkit/permalinks"
homepage = "https://docs.tonywu.dev/mdbookkit/permalinks"
keywords = ["mdbook", "markdown", "documentation", "git", "permalink"]
readme = "README.md"

exclude = ["tests"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
data-encoding = "2.11.0"
git2 = { version = "0.21.0", default-features = false }
gix-url = { version = "0.36.1" }
lol_html = { workspace = true }
mdbook-markdown = { workspace = true }
mdbook-preprocessor = { workspace = true }
mdbookkit = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true }
tap = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
mdbookkit = { workspace = true, features = ["_testing"] }
mdbookkit-testing = { workspace = true }

[package.metadata.binstall]
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
