[package]
name = "mdbook-rustdoc-links"
publish = true
version = "2.0.0"

edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

categories = ["text-processing", "development-tools", "command-line-utilities"]
description = "Link to Rust API docs by name in mdBook"
documentation = "https://docs.tonywu.dev/mdbookkit/rustdoc-links"
keywords = ["mdbook", "markdown", "documentation", "rust-analyzer", "rustdoc"]
readme = "README.md"

exclude = ["src/tests", "tests"]

[dependencies]
anyhow = { workspace = true }
async-lsp = { version = "0.2.2" }
cargo_toml = { version = "0.22.3" }
clap = { workspace = true }
dirs = { version = "6.0.0" }
futures-util = { workspace = true }
lsp-types = { version = "0.95.1" } # https://github.com/gluon-lang/lsp-types/issues/284
mdbook-markdown = { workspace = true }
mdbook-preprocessor = { workspace = true }
mdbookkit = { workspace = true }
miette = { workspace = true }
proc-macro2 = { version = "1.0.104", features = ["span-locations"] }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
sha2 = { version = "0.10.9" }
shlex = { workspace = true }
syn = { version = "2.0.111" }
tap = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "time",
] }
tokio-util = { version = "0.7.17", features = ["compat"] }
tower = { version = "0.5.2" }
tracing = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
mdbookkit = { workspace = true, features = ["_testing"] }
predicates = { workspace = true }
rstest = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }

[features]
_testing = ["mdbookkit/_testing"]

[package.metadata.binstall]
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
