[package]
name = "mdbook-rustdoc-links"
publish = true
version = "2.0.1"

edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

categories = ["text-processing", "development-tools", "command-line-utilities"]
description = "Link to Rust API docs by name in mdBook"
documentation = "https://docs.tonywu.dev/mdbookkit/rustdoc-links"
keywords = ["mdbook", "markdown", "documentation", "rust-analyzer", "rustdoc"]
readme = "README.md"

exclude = ["src/tests", "tests"]

[dependencies]
anyhow = { workspace = true }
cargo_metadata = "0.23.1"
clap = { workspace = true }
html-escape = "0.2.13"
lol_html = { workspace = true }
mdbook-markdown = { workspace = true }
mdbook-preprocessor = { workspace = true }
mdbookkit = { workspace = true }
percent-encoding = { workspace = true }
pulldown-cmark-to-cmark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
tap = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[package.metadata.binstall]
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
