[package]
name = "mdbook-rustdoc-links"
publish = true
version = "3.0.0"

edition.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

categories = ["text-processing", "development-tools", "command-line-utilities"]
description = "mdBook preprocessor to support intra-doc links"
documentation = "https://docs.tonywu.dev/mdbookkit/rustdoc-links"
homepage = "https://docs.tonywu.dev/mdbookkit/rustdoc-links"
keywords = ["mdbook", "markdown", "documentation", "rust-analyzer", "rustdoc"]
readme = "README.md"

exclude = ["tests"]

[dependencies]
anyhow = { workspace = true }
cargo_metadata = "0.23.1"
clap = { workspace = true }
html-escape = "0.2.14"
lol_html = { workspace = true }
mdbook-markdown = { workspace = true }
mdbook-preprocessor = { workspace = true }
mdbookkit = { workspace = true }
percent-encoding = { workspace = true }
pulldown-cmark-to-cmark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
tap = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[target.'cfg(windows)'.dependencies]
junction = "2.0.0"

[dev-dependencies]
mdbookkit = { workspace = true, features = ["_testing"] }
mdbookkit-testing = { workspace = true }

[package.metadata.binstall]
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
