[package]
name = "mdbookkit-testing"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
anstyle-svg = "1.1.0"
anyhow = { workspace = true }
regex = "1.12.3"
snapbox = { version = "1.2.1", features = ["term-svg", "dir", "regex"] }
tap = { workspace = true }
