[package]
name = "mdbookkit"
publish = true
version = "2.0.1"

edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Support library for mdBook preprocessors in the mdbookkit project"
documentation = "https://docs.tonywu.dev/mdbookkit/"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
console = { version = "0.16.2" }
indicatif = { workspace = true }
mdbook-markdown = { workspace = true }
mdbook-preprocessor = { workspace = true }
miette = { workspace = true }
owo-colors = { version = "4.2.3" }
pulldown-cmark-to-cmark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tap = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }

cargo-run-bin = { workspace = true, optional = true }
insta = { workspace = true, optional = true }
minijinja = { workspace = true, optional = true }

[features]
_testing = ["dep:cargo-run-bin", "dep:insta", "dep:minijinja"]

# defunct features
link-forever = []
rustdoc-link = []
[[bin]]
name = "mdbook-rustdoc-link"
path = "src/_bin/rustdoc_link.rs"
required-features = ["rustdoc-link"]
[[bin]]
name = "mdbook-link-forever"
path = "src/_bin/link_forever.rs"
required-features = ["link-forever"]
