[package]
name = "mdbookkit"
publish = true
version = "2.0.1"

edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Support library for mdBook preprocessors in the mdbookkit project"
documentation = "https://docs.tonywu.dev/mdbookkit/"
readme = "README.md"

[dependencies]
annotate-snippets = "0.12.15"
anyhow = { workspace = true }
bon = "3.9.1"
clap = { workspace = true }
console = { version = "0.16.3" }
indicatif = { workspace = true }
mdbook-markdown = { workspace = true }
mdbook-preprocessor = { workspace = true }
pulldown-cmark-to-cmark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tap = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
