[package]
name = "mdbookkit"
publish = true
version = "2.0.1"

edition.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Support library for mdBook preprocessors in the mdbookkit project"
documentation = "https://docs.tonywu.dev/mdbookkit/"
readme = "README.md"

[dependencies]
annotate-snippets = "0.12.16"
anyhow = { workspace = true }
bon = { workspace = true }
camino = { workspace = true, features = ["serde1"] }
clap = { workspace = true }
console = { version = "0.16.4" }
indicatif = { workspace = true }
mdbook-markdown = { workspace = true }
mdbook-preprocessor = { workspace = true }
percent-encoding = { workspace = true }
pulldown-cmark-to-cmark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tap = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }

[features]
_testing = ["annotate-snippets/testing-colors"]
