[package]
name = "mdbook-rustdoc-link"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-lsp = "0.2.2"
cargo_toml = "0.21.0"
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
lsp-types = "0.95.0"
mdbook = { workspace = true }
proc-macro2 = { version = "1.0.94", features = ["span-locations"] }
pulldown-cmark = { workspace = true }
pulldown-cmark-to-cmark = { workspace = true }
quote = "1.0.39"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.8"
syn = "2.0.99"
tap = { workspace = true }
tempfile = "3.18.0"
tokio = { workspace = true, features = [
  "fs",
  "macros",
  "process",
  "rt-multi-thread",
  "time",
] }
tokio-util = { version = "0.7.13", features = ["compat"] }
toml = { workspace = true }
tower = "0.5.2"

[dev-dependencies]
insta = { workspace = true }
