[package]
name = "mdbook-rustdoc-link"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-lsp = "0.2.2"
cargo_toml = "0.21.0"
chrono = { version = "0.4.40", features = ["clock"], default-features = false }
clap = { workspace = true }
console = "0.15.11"
dirs = "6.0.0"
env_logger = { workspace = true }
indicatif = "0.17.11"
log = { workspace = true }
lsp-types = "0.95.0"
mdbook = { workspace = true }
once_cell = "1.21.0"
proc-macro2 = { version = "1.0.94", features = ["span-locations"] }
pulldown-cmark = { workspace = true }
pulldown-cmark-to-cmark = { workspace = true }
quote = "1.0.39"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.8"
shlex = "1.3.0"
syn = "2.0.99"
tap = { workspace = true }
tempfile = "3.18.0"
tokio = { workspace = true, features = [
  "fs",
  "macros",
  "process",
  "rt-multi-thread",
  "time",
] }
tokio-util = { version = "0.7.13", features = ["compat"] }
toml = { workspace = true }
tower = "0.5.2"

[dev-dependencies]
insta = { workspace = true }
similar = { workspace = true }
util-testing = { workspace = true }
