[package]
name = "cargo-xtask"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
cargo-run-bin = { workspace = true }
clap = { workspace = true }
tap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
