[package]
name = "rust-analyzer"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
cargo-run-bin = { workspace = true }
flate2 = "1.1.0"
indicatif = "0.17.11"
reqwest = { version = "0.12.14", features = ["blocking"] }
tap = { workspace = true }
