[package]
name = "cargo-xtask"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
cargo-run-bin = { workspace = true }
clap = { workspace = true }
flate2 = "1.1.5"
indicatif = { workspace = true }
reqwest = { version = "0.12.28", features = ["blocking"] }
serde_json = { workspace = true }
tap = { workspace = true }
tempfile = { workspace = true }
zip = { version = "7.0.0", features = [
  "deflate", # https://github.com/rust-lang/rust-analyzer/blob/2025-03-17/xtask/src/dist.rs#L134
], default-features = false }
