[package]
name = "util-clap-reflect"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
mdbook = { workspace = true }
minijinja = { version = "2.8.0" }
serde = { workspace = true }
serde_json = { workspace = true }
tap = { workspace = true }

[dependencies.mdbookkit]
features = ["lib-rustdoc-link", "lib-link-forever", "common-cli"]
path = "../../crates/mdbookkit"
