[package]
name = "util-mdbook-socials"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
glob = "0.3.2"
image = { version = "0.25.6", features = [
  "png",
  "webp",
], default-features = false }
lol_html = "2.2.0"
minijinja = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tap = { workspace = true }
toml = { workspace = true }
url = { workspace = true, features = ["serde"] }
