[package]
name = "util-rust-analyzer"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
cargo-run-bin = { workspace = true }
clap = { workspace = true }
flate2 = "1.1.0"
indicatif = "0.17.11"
mdbook = { workspace = true, optional = true }
reqwest = { version = "0.12.14", features = ["blocking"] }
serde_json = { workspace = true }
tap = { workspace = true }

[features]
ra-version = ["dep:mdbook"]
