[package]
name = "util-rust-analyzer"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
cargo-run-bin = { workspace = true }
clap = { workspace = true }
flate2 = "1.1.0"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde_json = { workspace = true }
tap = { workspace = true }
tempfile = { workspace = true }
zip = { version = "2.6.1", features = [
  "deflate", # https://github.com/rust-lang/rust-analyzer/blob/2025-03-17/xtask/src/dist.rs#L134
], default-features = false }
