[package]
name = "util-testing"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
insta = { workspace = true }
once_cell = "1.21.3"
serde = { workspace = true }
serde_json = { workspace = true }
tap = { workspace = true }
url = { workspace = true }
